# Oc-Memory

./: .gitignore  .pre-commit-config.yaml  README.md  guardian.toml  memory_observer.py  requirements.txt  setup.py
.github/workflows/: guardian.yml  python-tests.yml
Patch_note/: GUARDIAN_TASKS.md  RELEASE_v1.0.2.md  RELEASE_v1.0.3.md  RELEASE_v1.0.4.md  RELEASE_v1.0.md
guardian/: .gitignore  Cargo.toml  README.md  guardian.toml.example
guardian/service/: com.openclaw.guardian.plist  install-service.ps1  install-service.sh  oc-guardian.service
guardian/src/: compression.rs  config.rs  health.rs  lib.rs  log_rotation.rs  logger.rs  macos.rs  main.rs  notification.rs  process.rs  recovery.rs
lib/: __init__.py  api_detector.py  dropbox_sync.py  error_handler.py  error_notifier.py  memory_merger.py  memory_store.py  observer.py  obsidian_client.py  reflector.py  ttl_manager.py  unified_search.py
scripts/: build.sh  install.ps1  install.sh
service/: com.openclaw.oc-memory.plist  install-service.ps1  install-service.sh  oc-memory.service  uninstall-service.sh
specs/: BRD.md  PRD.md  Tasks.md  Tech_Spec.md
tests/: conftest.py  test_api_detector.py  test_config.py  test_dropbox_sync.py  test_error_handler.py  test_error_notifier.py  test_memory_merger.py  test_memory_writer.py  test_observer.py  test_obsidian_client.py  test_reflector.py  test_ttl_manager.py  test_unified_search.py
